<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.emergency.EmergencyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/menu_emergency_guide"
            app:titleTextAppearance="@style/ToolbarTextAppearance"
            app:titleTextColor="@android:color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/emergencyImage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/scare_emergency"
                        android:textColor="@color/black"
                        app:fontFamily="@font/quicksand_semibold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:ellipsize="end"
                        android:text="@string/scare_emergency_message"
                        android:textColor="@color/black"
                        app:fontFamily="@font/quicksand_light" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/emergencyImage"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="16dp"
                    android:adjustViewBounds="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_doctor" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/emergency_title_1"
                android:textColor="@color/black"
                app:fontFamily="@font/quicksand_semibold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/emergency_desc_1"
                android:textColor="@color/black"
                app:fontFamily="@font/quicksand_light" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/emergency_title_2"
                android:textColor="@color/black"
                app:fontFamily="@font/quicksand_semibold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/emergency_desc_2"
                android:textColor="@color/black"
                app:fontFamily="@font/quicksand_light" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/emergency_title_3"
                android:textColor="@color/black"
                app:fontFamily="@font/quicksand_semibold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/emergency_desc_3"
                android:textColor="@color/black"
                app:fontFamily="@font/quicksand_light" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/emergency_title_4"
                android:textColor="@color/black"
                app:fontFamily="@font/quicksand_semibold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/emergency_desc_4"
                android:textColor="@color/black"
                app:fontFamily="@font/quicksand_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_circle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/emergency_prevent_1"
                    android:textColor="@color/black"
                    app:fontFamily="@font/quicksand_light" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_circle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/emergency_prevent_2"
                    android:textColor="@color/black"
                    app:fontFamily="@font/quicksand_light" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_circle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/emergency_prevent_3"
                    android:textColor="@color/black"
                    app:fontFamily="@font/quicksand_light" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_circle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/emergency_prevent_4"
                    android:textColor="@color/black"
                    app:fontFamily="@font/quicksand_light" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <View
                    android:layout_width="6dp"
                    android:layout_height="6dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_circle" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/emergency_prevent_5"
                    android:textColor="@color/black"
                    app:fontFamily="@font/quicksand_light" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>