<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_semibold"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="@string/update_app_title" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/quicksand_light"
        android:gravity="center"
        tools:text="@string/update_app_message"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_light"
            android:text="@string/dialog_default_cancel"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:backgroundTint="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/acceptButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/dialog_default_accept"
            android:textAllCaps="false" />

    </LinearLayout>

</LinearLayout>